finished projects html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,34 @@
 
         </section>
         <section class="projects">
-
+            <div>
+                <div>
+                    <h3>პროექტები</h3>
+                </div>
+                <div>
+                    <div>
+                        <img src="pictures/rectangle.png" alt="picture1" width="270px" height="200px">
+                        <p>
+                            ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
+                        </p>
+                    </div>
+                    <div>
+                        <img src="pictures/rectangle2.png" alt="picture2" width="270px" height="200px">
+                        <p>
+                            ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
+                        </p>
+                    </div>
+                    <div>
+                        <img src="pictures/rectangle3.png" alt="picture3" width="270px" height="200px">
+                        <p>
+                            ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
+                        </p>
+                    </div>
+                    <div>
+                        <h4>სხვა პროექტები</h4>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="partners">
 
