finished partners html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,45 @@
             </div>
         </section>
         <section class="partners">
-
+            <div>
+                <div>
+                    <h3>პარტნიორები</h3>
+                    <p>
+                        Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                         იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ
+                          დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+                    </p>
+                </div>
+                <div>
+                    <div>
+                        <img src="pictures/Group 66.png" alt="Group66">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 24.png" alt="picture5">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 25.png" alt="picture6">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 28.png" alt="picture7">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 27.png" alt="picture8">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 26.png" alt="picture9">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 31.png" alt="picture10">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 30.png" alt="picture11">
+                    </div>
+                    <div>
+                        <img src="pictures/Rectangle 29.png" alt="picture12">
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="contacts">
 
