finishes contact section

--- a/index.html
+++ b/index.html
@@ -93,11 +93,71 @@
             </div>
         </section>
         <section class="contacts">
-
+            <div>
+                <div>
+                    <div>
+                        <h2>კონტაქტი</h2>
+                    </div>
+                    <div>
+                        <p>
+                            Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                             იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ 
+                             დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="pictures/map.jpg" alt="map">
+                    </div>
+                    <div>
+                        <img src="pictures/call.png" alt="call">
+                        <p>
+                            +995 555 444 333
+                        </p>
+                    </div>
+                    <div>
+                        <img src="pictures/massage.png" alt="massage">
+                        <p>
+                            example@gmail.com 
+                        </p>
+                    </div>
+                </div>
+                <form action="text">
+                    <div>
+                        <div>
+                            <label for="name">სახელი, გვარი</label>
+                            <input type="text" id="name">
+                        </div>
+                        <div>
+                            <label for="mail">ელ.ფოსტა</label>
+                            <input type="text" id="mail">
+                        </div>
+                        <div>
+                            <label for="phone">ტელეფონის ნომერი</label>
+                            <input type="text" id="phone">
+                        </div>
+                        <div>
+                            <label for="textarea">შეტყობინება</label>
+                            <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+                        </div>
+                    </div>
+                </form>
+                <div>
+                    <button>გაგზავნა</button>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-        
+        <div>
+            <p>ყველა უფლება დაცულია</p>
+        </div>
+        <div>
+            <span>დამზადებულია</span>
+            <img src="pictures/Group 73.png" alt="heart">
+            <span>-ით</span>
+            <img src="pictures/Group 72.png" alt="smart">
+        </div>
+
     </footer>
 </body>
 </html>
