finish services section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
 
         </section>
         <section class="services">
-
+            <div>
+                <div>
+                    <img src="pictures/Rectangle 20.png" alt="rectangle20">
+                </div>
+                <div>
+                    <h3>სერვისები</h3>
+                    <p>
+                        ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და 
+                        დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი
+                         გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ
+                         ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს 
+                         Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო
+                          სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა,
+                           ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
+                    </p>
+                </div>
+            </div>
         </section>
         <section class="projects">
             <div>
@@ -28,19 +44,19 @@
                 </div>
                 <div>
                     <div>
-                        <img src="pictures/rectangle.png" alt="picture1" width="270px" height="200px">
+                        <img src="pictures/rectangle.png">
                         <p>
                             ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
                         </p>
                     </div>
                     <div>
-                        <img src="pictures/rectangle2.png" alt="picture2" width="270px" height="200px">
+                        <img src="pictures/rectangle2.png">
                         <p>
                             ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
                         </p>
                     </div>
                     <div>
-                        <img src="pictures/rectangle3.png" alt="picture3" width="270px" height="200px">
+                        <img src="pictures/rectangle3.png">
                         <p>
                             ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143 ნომერში
                         </p>
