--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body style="background-color:blueviolet">
+<body >
     <header>
         <nav class="navigation">
             <ul>
+                <span>
+                    <img class="list-image" src="photo/nav-icon.svg" alt="nav-icon">
+                </span>
                 <li>
-                    <img src="photo/nav-icon.svg" alt="nav-icon">
-                </li>
-                <li>
-                    <a href="">მთავარი</a>
+                    <a class="nav-main" href="">მთავარი</a>
                 </li>
                 <li>
                     <a href="">ჩვენს შესახებ</a>
@@ -29,9 +29,11 @@
                 <li>
                     <a href="">პარტნიორები</a>
                 </li>
-                <li>
-                    <a href="">კონტაქტი</a>
-                </li>
+                <div class="contacts">
+                    <li class="nav-contacts">
+                        <a class="contacts-color" href="">კონტაქტი</a>
+                    </li>
+                </div>
             </ul>
         </nav>
     </header>
